--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "node-openssl-cert": "0.0.41",
     "serialport": "^6.2.0",
     "usb-detection": "^2.1.0"
   },
