--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mustache-express": "^1.2.6",
     "node-openssl-cert": "0.0.41",
     "serialport": "^6.2.0",
+    "socket.io": "^2.1.0",
     "usb-detection": "^2.1.0"
   },
   "devDependencies": {},
